--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,12 @@ body {
     margin: 0;
     color: #FFFFFF;
 }
+.page {
+    display: none;
+}
+.page.active {
+    display: block;
+}
 
 .clearfix::after {
     content: "";
@@ -13,7 +19,7 @@ body {
 
 .container {
     max-width: 1600px;
-    padding: 0 15px;
+    padding: 0 40px;
     margin: 0 auto;
 }
 
@@ -60,11 +66,13 @@ body {
 
 .btn-1 {
     background-color: #C110CD;
+    box-shadow: 0 4px 8px rgba(148, 0, 211, 0.5);
 }
 
 .btn-2 {
     background-color: rgba(193, 16, 205, 1);
     margin-left: 16px;
+    box-shadow: 0 4px 8px rgba(148, 0, 211, 0.5);
 }
 
 
@@ -78,7 +86,7 @@ body {
 
 .main_c {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
 }
 
 h1 {
@@ -92,10 +100,14 @@ h1 {
 }
 
 .main_title {
-    font-size: 54px;
-    line-height: 54px;
+    font-size: 45px;
+    line-height: 45px;
     text-transform: uppercase;
     margin-bottom: 40px;
+    font-weight: 600;
+    text-shadow: 0 0 6px rgba(255, 255, 255, 0.37),
+    0 0 16px rgba(255, 255, 255, 0.37),
+    0 0 24px rgba(255, 255, 255, 0.22);
 }
 
 .main_btn_one,
@@ -110,6 +122,7 @@ h1 {
 .main_btn_one {
     padding: 20px 60px;
     background: rgba(193, 16, 205, 1);
+    box-shadow: 0 4px 8px rgba(148, 0, 211, 0.5);
 }
 
 .main_btn_two {
@@ -124,6 +137,10 @@ h1 {
     max-width: 1425px;
     padding: 0 15px;
     margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 
@@ -136,16 +153,19 @@ h1 {
 }
 
 .problems_cards {
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
+    display: grid;
+    grid-column-gap: 20px;
+    grid-row-gap: 20px;
+    grid-template-columns: repeat(3, 1fr);
+    width: fit-content;
+
 }
 
 .card {
     display: flex;
     flex-direction: column;
-    width: 450px;
-    height: 534px;
+    width: 359px;
+    height: 438px;
     text-align: left;
     margin-bottom: 34px;
     border: 1px solid rgba(163, 91, 255, 1);
@@ -178,11 +198,12 @@ h1 {
     display: flex;
     justify-content: space-between;
     padding: 0 60px;
+    gap: 24px;
 }
 
 .schedule_card {
-    width: 466px;
-    height: 508px;
+    width: 350px;
+    height: 430px;
     display: flex;
     background: rgba(178, 118, 255, 0.45);
     flex-direction: column;
@@ -214,16 +235,19 @@ h1 {
     position: relative;
 }
 
+.forms{
+    background: #000624 url("./../assets/atom.svg") no-repeat -45% 40%;
+}
 .sch {
     position: absolute;
-    top: 28%;
+    bottom: 0;
     left: 0;
 }
 
 .form_wrapper {
     display: flex;
     justify-content: end;
-    color: rgba(0, 6, 37, 1);
+    color: #FFFFFF;
     text-align: center;
 }
 
@@ -253,7 +277,7 @@ h1 {
 
 .form label {
     font-size: 25px;
-    color: #333;
+    color: #FFFFFF;
     margin-bottom: 15px;
     font-weight: 600;
 }
